--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "main": "server/server.js",
   "scripts": {
-    "start": "babel-node server/server.js",
+    "start": "node .",
     "start_prod": "NODE_ENV=production node .",
     "deploy": "NODE_ENV=production webpack -p --config webpack.config.production.js --progress",
     "clean": "rm -rf dist/"
@@ -18,26 +18,34 @@
   ],
   "dependencies": {
     "axios": "^0.14.0",
+    "babel": "^6.5.2",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
     "babel-polyfill": "6.9.1",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "base-64": "0.1.0",
     "chalk": "1.1.3",
-    "compression": "^1.6.2",
-    "cors": "^2.8.1",
+    "compression": "1.6.2",
+    "cors": "^2.5.2",
+    "css-loader": "^0.23.1",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "fontfaceobserver": "2.0.1",
     "history": "3.0.0",
     "humps": "^0.6.0",
     "immutable": "3.8.1",
+    "input-moment": "^0.3.2",
     "ip": "1.1.3",
     "isomorphic-fetch": "^2.1.1",
     "jquery": "3.1.0",
     "json-loader": "^0.5.3",
+    "loader-runner": "^2.2.0",
     "lodash": "^4.13.1",
     "loopback": "^2.22.0",
-    "loopback-boot": "^2.22.0",
-    "loopback-component-explorer": "^2.6.0",
-    "loopback-connector-mysql": "^2.3.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-component-explorer": "^2.1.0",
     "loopback-datasource-juggler": "^2.39.0",
     "material-ui": "0.15.2",
     "minimist": "1.2.0",
@@ -46,9 +54,11 @@
     "react-bootstrap": "^0.29.5",
     "react-breadcrumbs": "^1.3.16",
     "react-cookie": "0.4.3",
+    "react-date-picker": "^5.3.28",
     "react-datepicker": "^0.29.0",
     "react-dom": "^15.3.0-rc.2",
     "react-draggable": "^2.2.2",
+    "react-dragscroll": "^1.0.20",
     "react-loader": "^2.4.0",
     "react-loopback": "^0.4.0",
     "react-number-format": "^0.1.3",
@@ -57,8 +67,10 @@
     "react-router": "2.5.2",
     "react-router-redux": "4.0.5",
     "react-router-scroll": "0.2.0",
+    "react-scroll": "^1.4.7",
     "react-search-input": "^0.10.1",
     "react-select": "^1.0.0-beta13",
+    "react-spinkit": "^1.1.11",
     "react-tap-event-plugin": "1.0.0",
     "reactable": "^0.14.0",
     "redux": "3.5.2",
@@ -69,19 +81,20 @@
     "sanitize.css": "4.1.0",
     "serve-favicon": "^2.0.1",
     "stats-webpack-plugin": "^0.4.2",
+    "style-loader": "^0.12.4",
     "sweetalert-react": "^0.4.4",
+    "url-loader": "^0.5.7",
     "utils": "^0.3.1",
     "validator": "^5.5.0",
-    "webpack": "^2.1.0-beta.15",
+    "webpack": "^2.1.0-beta.25",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.16.1",
-    "webpack-hot-middleware": "^2.12.2",
+    "webpack-hot-middleware": "^2.13.1",
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
+    "babel-core": "6.10.4",
+    "babel-eslint": "6.1.2",
+    "babel-loader": "6.2.4",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-inline-elements": "6.8.0",
@@ -132,7 +145,6 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.7.0",
     "lint-staged": "2.0.1",
-    "loader-utils": "^0.2.16",
     "lodash": "4.13.1",
     "minimist": "1.2.0",
     "mocha": "2.5.3",
@@ -149,13 +161,15 @@
     "react-transform-hmr": "^1.0.0",
     "redux-devtools": "^2.1.5",
     "rimraf": "2.5.3",
+    "sass": "^0.5.0",
+    "sass-loader": "^4.0.2",
     "shelljs": "0.7.0",
     "sinon": "2.0.0-pre",
     "style-loader": "^0.12.4",
     "stylelint": "6.9.0",
     "stylelint-config-standard": "10.0.0",
     "url-loader": "0.5.7",
-    "webpack": "2.1.0-beta.15",
+    "webpack": "^2.1.0-beta.15",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "^2.12.1"
   },
