--- a/package.json
+++ b/package.json
@@ -89,7 +89,9 @@
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.13.1",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "1.0.0",
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.4.6"
   },
   "devDependencies": {
     "babel-core": "6.10.4",
