--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "compression": "1.6.2",
     "cors": "^2.5.2",
     "css-loader": "^0.23.1",
+    "dateformat": "^2.0.0",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
@@ -46,6 +47,7 @@
     "loopback": "^2.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.1.0",
+    "loopback-connector-mysql": "^5.0.0",
     "loopback-datasource-juggler": "^2.39.0",
     "material-ui": "0.15.2",
     "minimist": "1.2.0",
