--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "axios": "^0.14.0",
     "babel": "^6.5.2",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "6.9.1",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "base-64": "0.1.0",
