--- a/ArbulkUX/package.json
+++ b/ArbulkUX/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.5.2",
     "css-loader": "^0.23.1",
     "dateformat": "^2.0.0",
+    "eslint": "^3.19.0",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
@@ -54,6 +55,7 @@
     "material-ui": "0.15.2",
     "minimist": "1.2.0",
     "node-fetch": "1.5.3",
+    "node-sass": "^4.5.3",
     "react": "^15.3.0-rc.2",
     "react-bootstrap": "^0.29.5",
     "react-breadcrumbs": "^1.3.16",
