--- a/ArbulkUX/package.json
+++ b/ArbulkUX/package.json
@@ -32,7 +32,6 @@
     "cors": "^2.5.2",
     "css-loader": "^0.23.1",
     "dateformat": "^2.0.0",
-    "eslint": "^3.19.0",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
@@ -52,16 +51,18 @@
     "loopback-component-explorer": "^2.1.0",
     "loopback-connector-mysql": "^5.0.0",
     "loopback-datasource-juggler": "^2.39.0",
+    "material-datepicker": "0.0.1",
     "material-ui": "0.15.2",
     "minimist": "1.2.0",
     "node-fetch": "1.5.3",
-    "node-sass": "^4.5.3",
-    "react": "^15.3.0-rc.2",
+    "react": "^15.6.1",
     "react-bootstrap": "^0.29.5",
+    "react-bootstrap-datetimepicker": "0.0.22",
     "react-breadcrumbs": "^1.3.16",
     "react-cookie": "0.4.3",
     "react-date-picker": "^5.3.28",
     "react-datepicker": "^0.29.0",
+    "react-datetime": "^2.9.0",
     "react-dom": "^15.3.0-rc.2",
     "react-draggable": "^2.2.2",
     "react-dragscroll": "^1.0.20",
