--- a/ArbulkUX/package.json
+++ b/ArbulkUX/package.json
@@ -67,6 +67,7 @@
     "react-cookie": "0.4.3",
     "react-date-picker": "^5.3.28",
     "react-datepicker": "^0.29.0",
+    "react-datetime": "^2.9.0",
     "react-dom": "^15.3.0-rc.2",
     "react-draggable": "^2.2.2",
     "react-dragscroll": "^1.0.20",
