--- a/ArbulkUX/package.json
+++ b/ArbulkUX/package.json
@@ -24,83 +24,34 @@
   "dependencies": {
     "axios": "^0.14.0",
     "babel": "^6.5.2",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
     "babel-polyfill": "6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "base-64": "0.1.0",
-    "chalk": "1.1.3",
-    "compression": "1.6.2",
+    "compression": "^1.7.0",
     "cors": "^2.5.2",
     "css-loader": "^0.23.1",
-    "dateformat": "^2.0.0",
     "eslint": "^3.19.0",
     "express": "4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "fontfaceobserver": "2.0.1",
+    "helmet": "^3.8.1",
     "history": "3.0.0",
-    "humps": "^0.6.0",
     "immutable": "3.8.1",
-    "input-moment": "^0.3.2",
     "ip": "1.1.3",
-    "isomorphic-fetch": "^2.1.1",
     "jquery": "3.1.0",
-    "json-loader": "^0.5.3",
-    "loader-runner": "^2.2.0",
     "lodash": "^4.13.1",
     "loopback": "^2.22.0",
-    "loopback-boot": "^2.6.5",
-    "loopback-component-explorer": "^2.1.0",
-    "loopback-connector-mysql": "^5.0.0",
-    "loopback-datasource-juggler": "^2.39.0",
-    "material-ui": "0.15.2",
-    "minimist": "1.2.0",
-    "node-fetch": "1.5.3",
-    "node-sass": "^4.5.3",
+    "loopback-boot": "^2.26.1",
     "react": "^15.3.0-rc.2",
-    "react-bootstrap": "^0.29.5",
-    "react-breadcrumbs": "^1.3.16",
-    "react-cookie": "0.4.3",
-    "react-date-picker": "^5.3.28",
-    "react-datepicker": "^0.29.0",
-    "react-datetime": "^2.9.0",
     "react-dom": "^15.3.0-rc.2",
-    "react-draggable": "^2.2.2",
-    "react-dragscroll": "^1.0.20",
-    "react-loader": "^2.4.0",
     "react-loopback": "^0.4.0",
-    "react-number-format": "^0.1.3",
-    "react-player": "0.7.4",
     "react-redux": "^4.4.5",
     "react-router": "2.5.2",
     "react-router-redux": "4.0.5",
-    "react-router-scroll": "0.2.0",
-    "react-scroll": "^1.4.7",
-    "react-search-input": "^0.10.1",
-    "react-select": "^1.0.0-beta13",
-    "react-spinkit": "^1.1.11",
-    "react-tap-event-plugin": "1.0.0",
-    "reactable": "^0.14.0",
     "redux": "3.5.2",
     "redux-immutable": "3.0.6",
     "redux-saga": "0.11.0",
     "redux-thunk": "^2.1.0",
     "reselect": "2.5.3",
-    "sanitize.css": "4.1.0",
-    "serve-favicon": "^2.0.1",
-    "stats-webpack-plugin": "^0.4.2",
-    "style-loader": "^0.12.4",
-    "sweetalert-react": "^0.4.4",
-    "url-loader": "^0.5.7",
     "utils": "^0.3.1",
     "validator": "^5.5.0",
     "webpack": "^2.1.0-beta.25",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.13.1",
     "whatwg-fetch": "1.0.0",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
