--- a/ArbulkUX/package.json
+++ b/ArbulkUX/package.json
@@ -38,17 +38,25 @@
     "lodash": "^4.13.1",
     "loopback": "^2.22.0",
     "loopback-boot": "^2.26.1",
-    "react": "^15.3.0-rc.2",
-    "react-dom": "^15.3.0-rc.2",
+    "material-ui": "^0.19.0",
+    "moment": "^2.18.1",
+    "react": "^15.6.1",
+    "react-datepicker": "^0.53.0",
+    "react-dom": "^15.6.1",
+    "react-loader": "^2.4.2",
     "react-loopback": "^0.4.0",
     "react-redux": "^4.4.5",
     "react-router": "2.5.2",
     "react-router-redux": "4.0.5",
+    "react-spin": "^0.6.2",
+    "react-spinkit": "^3.0.0",
+    "reactable": "^0.14.1",
     "redux": "3.5.2",
     "redux-immutable": "3.0.6",
     "redux-saga": "0.11.0",
     "redux-thunk": "^2.1.0",
     "reselect": "2.5.3",
+    "sweetalert-react": "^0.4.10",
     "utils": "^0.3.1",
     "validator": "^5.5.0",
     "webpack": "^2.1.0-beta.25",
